<resources>
    <string name="app_name">My Application</string>
    <string name="movie_title">Bloodshot</string>
    <string name="movie_desc">After he and his wife are murdered, marine Ray Garrison is resurrected by a team of
        scientists. Enhanced with nanotechnology, he becomes a superhuman, biotech killing machine—‘Bloodshot’. As Ray
        first trains with fellow super-soldiers, he cannot recall anything from his former life. But when his memories
        flood back and he remembers the man that killed both him and his wife, he breaks out of the facility to get
        revenge, only to discover that there’s more to the conspiracy than he thought.
    </string>
    <string name="movie_cast"><![CDATA[Cast & Crew]]></string>
    <string name="dir_name_ltl">Director</string>
    <string name="dir_name">Dave Wilson</string>
    <string name="cast_name_ltl">Cast</string>
    <string name="cast_name_list">Vin Diesel, Eiza Gonzalez, Sam Heughan, Toby Kebbel</string>
    <string name="movie_rent">Rent</string>
    <string name="title_activity_exercise">Exercise</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="header_title">Selamat</string>
    <string name="name">Audie Milson</string>
    <string name="footer_title">Android Developer</string>
    <string name="footer_section">Anda sudah menjadi seorang</string>
</resources>