<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Movie">

        <ImageView
                android:id="@+id/iv_hero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/backdrop_bloodshot" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:layout_alignStart="@id/iv_hero"
                android:layout_alignBottom="@id/iv_hero"
                android:text="@string/movie_title"/>

        <TextView
                android:id="@+id/txt_Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/movie_desc"
                android:textColor="@color/shade"
                android:layout_below="@id/iv_hero"/>

        <TextView
                android:id="@+id/txt_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_cast"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@id/txt_Desc"/>

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/txt_section">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dir_name_ltl"
                android:layout_weight="0.3"
                android:textColor="@android:color/black"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dir_name"
                android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/linearLayout">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cast_name_ltl"
                android:layout_weight="0.3"
                android:textColor="@android:color/black"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cast_name_list"
                android:layout_weight="1"/>

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_rent"
            android:layout_margin="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>