<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieCl">

    <ImageView
            android:id="@+id/iv_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backdrop_bloodshot"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_hero"
            app:layout_constraintStart_toStartOf="@id/iv_hero"/>

    <TextView
            android:id="@+id/textViewOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/movie_desc"
            app:layout_constraintTop_toBottomOf="@id/iv_hero"/>

    <TextView
            android:id="@+id/textViewCastCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_cast"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/textViewOverview"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/textViewDirector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dir_name_ltl"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintEnd_toStartOf="@id/textViewDaveWilson"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCastCrew"/>

    <TextView
            android:id="@+id/textViewDaveWilson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dir_name"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewDirector"
            app:layout_constraintTop_toTopOf="@id/textViewDirector"/>

    <TextView
            android:id="@+id/textViewCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast_name_ltl"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintEnd_toStartOf="@id/textViewPlayer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDirector"/>

    <TextView
            android:id="@+id/textViewPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast_name_list"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewCast"
            app:layout_constraintTop_toTopOf="@id/textViewCast"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_rent"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>